Correction version mobile index

--- a/scss/restaurants.css
+++ b/scss/restaurants.css
@@ -1,18 +1,21 @@
 * {
   font-family: "Roboto", sans-serif;
-  font-size: 1em;
 }
 
 body {
   margin: 0;
+  font-size: 16px;
 }
 
 header {
   display: flex;
   justify-content: center;
-  padding-top: 50px;
-  padding-bottom: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   position: relative;
+}
+header img {
+  width: 200px;
 }
 header i {
   font-size: 3em;
@@ -106,6 +109,7 @@ footer {
   background-color: #353535;
   padding-top: 30px;
   padding-bottom: 30px;
+  padding-left: 30px;
 }
 footer img {
   color: white;
@@ -114,17 +118,27 @@ footer img {
 footer ul {
   list-style-type: none;
   color: white;
-  font-size: 2em;
+  padding-left: 0;
 }
 footer ul li {
   margin-bottom: 15px;
+}
+footer a {
+  color: white;
+  text-decoration: none;
+}
+footer p {
+  font-family: "Shrikhand", serif;
+  font-weight: 300;
+  font-size: 27px;
+  color: white;
 }
 footer .symbols {
   display: flex;
   align-items: baseline;
 }
 footer i {
-  padding-right: 20px;
+  padding-right: 10px;
 }
 footer p {
   margin-top: 0;
