--- a/scss/style.css
+++ b/scss/style.css
@@ -24,7 +24,7 @@ header img {
   background-color: #dedede;
   padding-top: 15px;
   padding-bottom: 15px;
-  box-shadow: 0 10px 10px #686868;
+  box-shadow: 0 5px 5px #686868;
   position: relative;
   width: 100%;
 }
@@ -74,7 +74,7 @@ header img {
   margin: 20px 0;
   background-color: #eeeeee;
   border: none;
-  border-radius: 30px;
+  border-radius: 20px;
   padding: 10px;
   box-shadow: 10px 10px 10px lightgray;
   width: 100%;
@@ -85,8 +85,8 @@ header img {
   position: absolute;
   left: 0;
   top: 50%;
-  width: 50px;
-  height: 50px;
+  width: 25px;
+  height: 25px;
   background-color: #A05ADC;
   color: white;
   display: flex;
@@ -96,42 +96,33 @@ header img {
   transform: translate(-50%, -50%);
 }
 .fonction button i {
-  padding-right: 50px;
-  font-size: 2em;
+  padding-right: 20px;
   color: grey;
 }
 .fonction button:hover i {
   color: #A05ADC;
 }
-.fonction p {
-  font-size: 2em;
-}
 .fonction h2 {
-  font-size: 3em;
-  margin-left: -25px;
-}
-
-h3 {
-  font-size: 2em;
-  color: black;
-  margin-bottom: 0px;
+  font-size: 1.5em;
+  margin-left: -30px;
 }
 
 .cards {
   padding-left: 30px;
   padding-right: 30px;
   background-color: #eeeeee;
-  padding-bottom: 100px;
+  padding-bottom: 20px;
+}
+.cards h3 {
+  margin-bottom: 0px;
 }
 .cards p {
-  font-size: 2em;
   font-weight: 150;
-  color: black;
   margin-top: 0px;
 }
 .cards img {
-  width: 900px;
-  height: 500px;
+  width: 100%;
+  height: 200px;
   -o-object-fit: cover;
      object-fit: cover;
   border-top-left-radius: 30px;
@@ -140,25 +131,27 @@ h3 {
 .cards a {
   border-radius: 20px;
   text-decoration: none;
+  color: black;
 }
 .cards h2 {
-  font-size: 3em;
-  padding-top: 50px;
+  font-size: 1.5em;
+  padding-top: 30px;
+  margin-top: 0;
 }
 .cards article {
   background-color: white;
   border-radius: 30px;
-  width: 900px;
+  width: 100%;
   padding-bottom: 5px;
   margin-bottom: 40px;
   position: relative;
 }
 .cards i {
-  font-size: 3em;
+  font-size: 1.5em;
   color: black;
   position: absolute;
-  right: 30px;
-  bottom: 50px;
+  right: 20px;
+  bottom: 30px;
 }
 .cards .cardtext {
   padding-left: 20px;
@@ -168,6 +161,7 @@ footer {
   background-color: #353535;
   padding-top: 30px;
   padding-bottom: 30px;
+  padding-left: 30px;
 }
 footer img {
   color: white;
@@ -176,17 +170,27 @@ footer img {
 footer ul {
   list-style-type: none;
   color: white;
-  font-size: 2em;
+  padding-left: 0;
 }
 footer ul li {
   margin-bottom: 15px;
+}
+footer a {
+  color: white;
+  text-decoration: none;
+}
+footer p {
+  font-family: "Shrikhand", serif;
+  font-weight: 300;
+  font-size: 27px;
+  color: white;
 }
 footer .symbols {
   display: flex;
   align-items: baseline;
 }
 footer i {
-  padding-right: 20px;
+  padding-right: 10px;
 }
 footer p {
   margin-top: 0;
